fix: modal z-index

--- a/components/TaskTableItem.module.scss
+++ b/components/TaskTableItem.module.scss
@@ -99,5 +99,5 @@
 }
 .modal {
   position: relative;
-  z-index: 2;
+  z-index: 2 !important;
 }
